# FuncProg

2/pr/: CHANGELOG.md  pr.cabal
2/pr/app/: Main.hs
2/pr/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
l1/: README.md  lab1.cabal  package.yaml  stack.yaml
l1/app/: Main.hs
l1/db/: create.sql
l1/src/: DBManager.hs  MainMenu.hs  Menu.hs  Service.hs  StudentsMenu.hs  Table.hs
