cabal-version: 2.2
name:           lab1
version:        0.1.0.0


library
  exposed-modules:
      DBManager
      MainMenu
      Menu
      Service
      StudentsMenu
      Table
  other-modules:
      Paths_lab1
  autogen-modules:
      Paths_lab1
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , binary >=0.8.7.0
    , bytestring >=0.10.10.0
    , haskeline >=0.8.1.1
    , io-streams >=1.5.2.0
    , mysql-haskell >=0.8.4.3
    , text >=1.2.4.0
    , utf8-string >=1.0.2
  default-language: Haskell2010

executable lab1-exe
  main-is: Main.hs
  other-modules:
      Paths_lab1
  autogen-modules:
      Paths_lab1
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , binary >=0.8.7.0
    , bytestring >=0.10.10.0
    , haskeline >=0.8.1.1
    , io-streams >=1.5.2.0
    , lab1
    , mysql-haskell >=0.8.4.3
    , text >=1.2.4.0
    , utf8-string >=1.0.2
  default-language: Haskell2010

test-suite lab1-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_lab1
  autogen-modules:
      Paths_lab1
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , binary >=0.8.7.0
    , bytestring >=0.10.10.0
    , haskeline >=0.8.1.1
    , io-streams >=1.5.2.0
    , lab1
    , mysql-haskell >=0.8.4.3
    , text >=1.2.4.0
    , utf8-string >=1.0.2
  default-language: Haskell2010
